--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "i18next": "^23.16.8",
+    "pdfjs-dist": "^2.16.105",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
@@ -18,7 +19,7 @@
     "react-i18next": "^13.5.0",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
-    "react-pdf": "^5.7.1",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.2",
